[tool.poetry]
name = "multi"
version = "0.1.1"
description = "📚 Manage all my other projects 📚"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
abbrev = "^1.0.1"
typer = "^0.7.0"
dtyper = "^2.0.3"
loady = "^1.8.12"
tomlkit = "^0.11.6"
datacls = "^4.5.0"
pyperclip = "^1.8.2"
lxml = "^4.9.2"
beautifulsoup4 = "^4.11.2"
safer = "^4.4.1"
requests = "^2.28.2"
refurb = "^1.13.0"
pelican = {extras = ["markdown"], version = "^4.8.0"}
typogrify = "^2.0.7"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
mkdocs = "^1.4.2"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs-material = "^9.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
