[tool.poetry]
name = "multi"
version = "0.1.1"
description = "📚 Manage all my other projects 📚"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
abbrev = "*"
typer = "*"
dtyper = "*"
loady = "*"
tomlkit = "*"
datacls = "*"
lxml = "*"
safer = "*"
requests = "*"
refurb = "*"
pelican = {extras = ["markdown"], version = "*"}
typogrify = "*"


[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mkdocs = "*"
mkdocstrings = {extras = ["python"], version = "*"}
mkdocs-material = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
