[project]
name = "multi"
version = "0.1.1"
description = "📚 Manage all my other projects 📚"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "abbrev",
    "typer",
    "dtyper",
    "loady",
    "tomlkit",
    "datacls",
    "lxml",
    "safer",
    "requests",
    "refurb",
    "pelican[markdown]",
    "typogrify",
    "ruamel.yaml",
]

[project.scripts]
multi = "multi.__main__:main"

[dependency-groups]
dev = [
    "black",
    "flake8",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
